# loaderCompanionKernel

./: CMakeLists.txt  LoaderCompanionKernel.yml  README.md
src/: main.c
src/utils/: vitaPackage.cpp  vitaPackage.h
